/api/coredata/acquire - relabel "Skip This" button to "Continue" https://www.pivotaltracker.com/story/show/135986271

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -173,7 +173,7 @@
 <div>
 <br /><br />
 <!--<button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">I'm Done Entering Treatments</button> &nbsp;&nbsp;-->
-<div class="btn btn-default continue-btn">{{ _("Skip This") }} <i class="fa fa-chevron-right"></i></div>
+<div class="btn btn-default continue-btn">{{ _("Continue") }} <i class="fa fa-chevron-right"></i></div>
 
 {% endif %}
 
