wrap timeout message in landing page in a get text call for i18n

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -34,7 +34,7 @@
                     <a href="/go" class="btn feature-btn feature-btn-primary">{{ _("Register") }}</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">{{ _("Login") }}</a>
                     {% if timed_out %}
                         <div id="timeOutMessageContainer">
-                            You have been logged out due to inactivity. Please log in again to continue.
+                            {{ _("You have been logged out due to inactivity. Please log in again to continue.") }}
                         </div>
                     {% endif %}
                 </div>
