--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -74,11 +74,11 @@
           <div class="form-group">
             <label>{{ _("Birth Date") }}</label>
             <div class="row">
-              <div class="col-xs-4">
-                <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" data-birthday="true" required />
+              <div class="col-md-3 col-xs-4">
+                <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" data-birthday="true" pattern="\d[\d]?" data-error="The birth day field is required and must be valid format" required />
               </div>
-              <div class="col-xs-4">
-                <select type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" id="month" data-birthday="true" required>
+              <div class="col-md-3 col-xs-4">
+                <select type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" id="month" data-birthday="true" data-error="-- A birth month must be selected" required>
                   <option value="">{{ _("Month") }}...</option>
                   <option value="01">{{ _("January") }}</option>
                   <option value="02">{{ _("February") }}</option>
@@ -94,18 +94,19 @@
                   <option value="12">{{ _("December") }}</option>
                 </select>
               </div>
-              <div class="col-xs-4">
-                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" data-birthday="true" required />
+              <div class="col-md-3 col-xs-4">
+                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "\d{4}" data-birthday="true" data-error="The birth year is required and must be in valid format" required />
               </div>
             </div>
-            <span id="errorbirthday" class="help-block tnth-hide">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+            <div class="help-block with-errors" style="margin-top: 1em; padding-left: 1em"></div>
+            <span id="errorbirthday" class="help-block tnth-hide" style="margin-top: 1em; padding-left: 1em">A block of help text that breaks onto a new line and may extend beyond one line.</span>
         </div>
       </div>
        <script>$(function () {
             tnthAjax.getDob($("#iq_userId").val());
             ["month", "date", "year"].forEach(function(field) {
               $("#" + field).on("blur", function() {
-                  assembleContent.demo($("#iq_userId").val());
+                  if (($("#month").val() != "") && ($("#date").val() != "") && ($("#year").val() != "")) assembleContent.demo($("#iq_userId").val());
               });
             });
           });</script>
