front end password refinements to include refined validation message

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -51,7 +51,7 @@ body {
 #socialMediaRegistrationContainer {
   display: none;
 }
-#loginEmailReminderText {
+#emailInfoText {
   display: none;
 }
 #mainHolder {
