--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -228,7 +228,7 @@ $(document).ready(function(){
 });
 
 /** Remove patientQuestion functionality for now
-var getQs = [ "biopsy", "pca_diag", "tx"];
+var getQs = [ "biopsy", "pca_diag"];
 $.each(getQs, function(i,val){
     $.ajax ({
         type: "GET",
